5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1593_820.log
== TEST (2019-04-03 00:59:11) 
-- CODE:
VALOR = int(input("Qual o valor do saque? ")
valor // 50 = notas_Rs50
resto_Rs50 = valor % 50
notas_Rs10 = resto_Rs50 // 10
resto_Rs10 = resto_Rs50 % 10
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 2
    valor // 50 = notas_Rs50
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:00:20) 
-- CODE:
VALOR = int(input("Qual o valor do saque? ")
notas_Rs50 = valor // 50
resto_Rs50 = valor % 50
notas_Rs10 = resto_Rs50 // 10
resto_Rs10 = resto_Rs50 % 10
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 2
    notas_Rs50 = valor // 50
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:01:59) 
-- CODE:
valor = int(input("Qual o valor do saque? ")
notas_Rs50 = valor // 50
resto_Rs50 = valor % 50
notas_Rs10 = resto_Rs50 // 10
resto_Rs10 = resto_Rs50 % 10
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 2
    notas_Rs50 = valor // 50
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:03:06) 
-- CODE:
valor = int(input("Qual o valor do saque? ")
notas_Rs50 = valor // 50
resto_Rs50 = valor % 50
notas_Rs10 = resto_Rs50 // 10
resto_Rs10 = resto_Rs50 % 10
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- EXECUTION TIME:
0.157654
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 2
    notas_Rs50 = valor // 50
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:09:59) 
-- CODE:
valor = int(input("Qual o valor do saque? ")
notas_Rs50 = valor // 50
resto_Rs50 = valor % 50
notas_Rs10 = 
resto_Rs10 =
notas_Rs2 = 
-- ERROR:
File "XXXX", line 2
    notas_Rs50 = valor // 50
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:10:06) 
-- CODE:
valor = int(input("Qual o valor do saque? ")
notas_Rs50 = valor // 50
resto_Rs50 = valor % 50

-- ERROR:
File "XXXX", line 2
    notas_Rs50 = valor // 50
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:11:11) 
-- CODE:
valor = int(input("Qual o valor do saque? ")
notas_rs50 = valor // 50
resto_Rs50 = valor % 50

-- ERROR:
File "XXXX", line 2
    notas_rs50 = valor // 50
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:11:15) 
-- CODE:
valor = int(input("Qual o valor do saque? ")
notas_rs50 = valor // 50
resto_rs50 = valor % 50

-- ERROR:
File "XXXX", line 2
    notas_rs50 = valor // 50
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:11:24) 
-- CODE:
valor = int(input("Qual o valor do saque? ")
notas_rs50 = valor // 50
resto_rs50 = valor % 50

-- EXECUTION TIME:
0.153664
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 2
    notas_rs50 = valor // 50
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:04:59) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
r50 = n50 % 50
# teste
print(n50)
print(r50)
-- OUTPUT:
40
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:06:29) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
n20 = n50 // 20
# teste
print(n50)
print(n20)
-- OUTPUT:
40
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:07:43) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
n10 = n50 // 10
# teste
print(n50)
print(n20)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(n20)
NameError: name 'n20' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:07:56) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
n10 = n50 // 10
# teste
print(n50)
print(n10)
-- OUTPUT:
40
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:08:54) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
n10 = n50 // 10
# teste
print(n50)
print(n10)
-- OUTPUT:
40
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:09:09) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
n10 = n50 % 10
# teste
print(n50)
print(n10)
-- OUTPUT:
40
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:10:24) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
n10 = n50 % 10
n2 = n10 % 2
# teste
print(n50)
print(n10)
print(n2)
-- OUTPUT:
40
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:11:39) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
r50 = saque % 50
n10 = n50 % 10
n2 = n10 % 2
# teste
print(n50)
print(r50)
print(n10)
print(n2)
-- OUTPUT:
40
28
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:12:44) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
r50 = saque % 50
n10 = r50 // 10
r10 = saque % 10
n2 = n10 % 2
# teste
print(n50)
print(r50)
print(n10)
print(r10)
print(n2)
-- OUTPUT:
40
28
2
8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:13:16) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
r50 = saque % 50
n10 = r50 // 10
r10 = saque % 10
n2 = n10 // 2
# teste
print(n50)
print(r50)
print(n10)
print(r10)
print(n2)
-- OUTPUT:
40
28
2
8
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:13:36) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
r50 = saque % 50
n10 = r50 // 10
r10 = saque % 10
n2 = r10 // 2
# teste
print(n50)
print(r50)
print(n10)
print(r10)
print(n2)
-- OUTPUT:
40
28
2
8
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:14:29) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
r50 = saque % 50
n10 = r50 // 10
r10 = saque % 10
n2  = r10 // 2
# Saida
print(r50)
print(r10)
print(n2)
-- OUTPUT:
28
8
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:14:46) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
r50 = saque % 50
n10 = r50 // 10
r10 = saque % 10
n2  = r10 // 2
# Saida
print(n50)
print(r10)
print(n2)
-- OUTPUT:
40
8
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:14:59) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
r50 = saque % 50
n10 = r50 // 10
r10 = saque % 10
n2  = r10 // 2
# Saida
print(n50)
print(n10)
print(n2)
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:15:18) 
-- CODE:
# Entradas
saque = int(input("Determine: "))
# Variavel
n50 = saque // 50
r50 = saque % 50
n10 = r50 // 10
r10 = saque % 10
n2  = r10 // 2
# Saida
print(n50)
print(n10)
print(n2)
-- EXECUTION TIME:
0.125402
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
